--- a/index.html
+++ b/index.html
@@ -1015,7 +1015,7 @@ function showTooltip(e) {
             content += `<hr/><b>${title}</b><br/>${items_str}`;
           }
           if (desc) {
-            content += `<br/><br/>${desc}`;
+            content += `<hr/>${desc}`;
           }
         }
       }
