--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
 <meta charset="utf-8">
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 <meta name="mobile-web-app-capable" content="yes">
-<link rel="icon" href="data:,">
+
+<link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+<link rel="manifest" href="images/favicon/site.webmanifest">
+
 <meta property="og:image" content="https://joric.github.io/stalker/images/thumbnail.jpg" />
 <meta property="og:site_name" content="Joric" />
 <meta property="og:type" content="object" />
