--- a/index.html
+++ b/index.html
@@ -1152,7 +1152,7 @@ function addMarker(feature) {
   if (o.clue) icon = 'stash';
   if (icon=='stash') group = 'stashes';
 
-  if (o.name=='EMarkerType::Door' && o.locked!=true && o.unbreakable!=true) icon='circle'; // mark all unlocked doors as open. doesn't look pretty. 
+  if (o.outer && o.outer.startsWith('BP_DoorView') && o.locked!=true) icon='circle'; // mark all unlocked doors as open. doesn't look pretty. 
 
   image = 'images/sprites/' + ((icons[icon] && icons[icon].image) || 'CompassMarker_2_3.png');
 
