--- a/index.html
+++ b/index.html
@@ -1060,15 +1060,14 @@ function showTooltip(e) {
   }
 
 
-  /*
   if (o.references) {
-    content += `<hr/>`;
-    for (const[name,path] of Object.entries(o.references)) {
+    content += `<hr/><div class="overflow-container">`;
+    for (const name of o.references) {
       let title = lang[`sid_questItemprototypes_${name}_name`];
-      content += `${title || name}<br/>`;
+      content += `<a href="#${name}" onclick="copyToClipboard('XStartQuestNodeBySID' + this.textContent)" title="${name}">${name}</a><br/>`;
     }
+    content +='</div>';
   }
-  */
 
   tooltip.innerHTML = content;
 
