--- a/index.html
+++ b/index.html
@@ -1026,11 +1026,12 @@ function showTooltip(e) {
   }
 
   if (o.items) {
-    content += `<hr/>`;
+    content += `<hr/><div class="overflow-container">`;
     for (const name of o.items) {
       let title = lang[`sid_questItemprototypes_${name}_name`];
-      content += `[${title || name}]<br/>`;
+      content += `<span title="${name}">[${title || name}]</span><br/>`;
     }
+    content +='</div>';
   }
 
   if (o.spawns) {
