--- a/index.html
+++ b/index.html
@@ -1187,7 +1187,7 @@ function addMarker(feature) {
   if (o.clue) icon = 'stash';
   if (icon=='stash') group = 'stashes';
 
-  if (o.uaid && o.uaid.startsWith('BP_DoorView') && o.locked!=true) icon='circle'; // mark all unlocked doors as open. doesn't look pretty. 
+  if (o.locked) icon='circle_dot';
 
   image = 'images/sprites/' + ((icons[icon] && icons[icon].image) || 'CompassMarker_2_3.png');
 
