--- a/index.html
+++ b/index.html
@@ -1019,7 +1019,7 @@ function showTooltip(e) {
 
   let info = renderItem(marker.feature);
 
-  if (o.locked) info.title = lang['sid_misc_hint_cantopen'];
+  if (isLocked(o)) info.title = lang['sid_misc_hint_cantopen'];
 
   let content = `<b>${info.title}</b>`;
 
@@ -1148,6 +1148,13 @@ function getIconProp(o) {
   return prop;
 }
 
+function isLocked(o) {
+  // all doors are closed by default unless it's DoorView without locked property
+  let door = o.name=='EMarkerType::DynamicObject' || o.name=='EMarkerType::Door';
+  let doorview = door && o.uaid && o.uaid.startsWith('BP_DoorView');
+  return doorview ? o.locked : door;
+}
+
 function showTooltipExt(e) {
   let marker = e.target;
   //setMarkerSize(e.target, size * 1.15);
@@ -1187,8 +1194,7 @@ function addMarker(feature) {
   if (o.clue) icon = 'stash';
   if (icon=='stash') group = 'stashes';
 
-  // all doors are closed by default unless it's DoorView without locked property
-  if (o.uaid && o.uaid.startsWith('BP_DoorView') && !o.locked) icon='circle';
+  if (isLocked(o)) icon='circle_dot';
 
   image = 'images/sprites/' + ((icons[icon] && icons[icon].image) || 'CompassMarker_2_3.png');
 
